--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "build": "set INLINE_RUNTIME_CHUNK=false",
   "proxy": "https://fari-stage.netlify.app/",
   "engines": {
-    "node": "14.15.4"
+    "node": "19.1.0"
   },
   "scripts": {
     "start": "node server.js",
@@ -48,6 +48,7 @@
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0",
     "pg": "^8.8.0",
+    "rate-limit-redis": "^3.0.1",
     "redis": "^4.5.0",
     "stripe": "^11.1.0"
   },
