--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
+    "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
