--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodemailer": "^6.8.0",
     "nodemailer-express-handlebars": "^5.0.0",
     "pg": "^8.8.0",
+    "rate-limit-memcached": "^0.6.0",
     "rate-limit-redis": "^3.0.1",
     "redis": "^4.5.0",
     "stripe": "^11.1.0"
