--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js",
     "start:dev": "nodemon server.js",
     "seed": "node ./backend/db/seed.js",
+    "altering-seed": "node ./backend/db/altering-seed.js",
     "scheduler": "node scripts.js"
   },
   "repository": {
