--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "hpp": "^0.2.3",
     "ioredis": "^5.2.4",
     "jsonwebtoken": "^8.5.1",
+    "micro": "^10.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
